openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aurora-nexus
  labels:
    app: aurora-nexus
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aurora-nexus
  template:
    metadata:
      labels:
        app: aurora-nexus
    spec:
      containers:
      - name: aurora-app
        image: image-registry.openshift-image-registry.svc:5000/my-namespace/aurora-nexus:latest
        ports:
        - containerPort: 8081 # Nginx Port
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "2000m"
            memory: "4Gi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 20
